# sinkhole

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: blog-sinkhole.md
eval/: EVAL_PLAN.md  dataset.py  plot.py  report.py  run_eval.py  stats.py
eval/results/: prompts_cache.json  raw_results.jsonl  stats.json  stats_report.md
examples/: quick_start.py
results/: qwen25_7b_analysis.html  qwen25_7b_analysis.json
sinkhole/: __init__.py  analyzer.py  cli.py  extractor.py  models.py  probe.py  report.py  viz.py
tests/: test_analyzer.py  test_probe.py  test_report.py
