[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinkhole"
version = "0.1.0"
description = "Diagnostic tool for analyzing attention sinks and activation spikes in transformer models"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "transformers>=4.40",
    "torch>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sinkhole = "sinkhole.cli:cli"

[tool.setuptools.packages.find]
include = ["sinkhole*"]
